# satellite-simulation

./: docker-compose.yml
backend/: Dockerfile  pyproject.toml
frontend/: Dockerfile  package-lock.json  package.json
